# smart_lidar

./: readme.md  rosenv.sh
common/: .gitattributes  .gitignore  env_arm.sh  env_x86.sh  readme.md  toolchain.cmake
common/messages/: AppCleanInfo.py  AppMisc.py  AppNotDisturbTime.py  AppPartsLife.py  AppRoomClean.py  AppSetCleaningSequence.py  AppSetRoomName.py  AppSpotClean.py  BlueToothState.py  CMakeLists.txt  ClearComponent.py  Coder.py  ColorRGBA.py  FactoryTestConfig.py  IO.py  IrCode.py  MapRect.py  Odometry.py  OverloadConfig.py  Ranges.py  RobotStatus.py  Shell.py  TimedTaskInfo.py  Vector3.py  Voice.py
common/messages/python/: gen-types.sh
common/messages/python/mars_message/: ClearComponent.py  Coder.py  GridMap.py  LaserScan.py  ObsAvoidance.py  Speed.py  __init__.py
common/messages/src/: app_carpet.lcm  app_clean_record.lcm  app_local_alert.lcm  app_map.lcm  app_misc.lcm  app_not_disturb.lcm  app_partition_division.lcm  app_path.lcm  app_restricted_area.lcm  app_room_clean.lcm  app_room_properties.lcm  app_set_room_name.lcm  app_set_room_properites.lcm  app_virtual_wall.lcm  app_zone_clean.lcm  bluetooth_info.lcm  bumper.lcm  debug.lcm  door_info.lcm  factorytest.lcm  imu.lcm  ircode.lcm  ircode2.lcm  map_rect.lcm  odom.lcm  overload_config.lcm  parts_life_config.lcm  path.lcm  point_cloud.lcm  polygon.lcm  pose.lcm  ranges.lcm  robot_status.lcm  room_info.lcm  room_propety.lcm  shell.lcm  speed.lcm  twist.lcm  vector3.lcm  voice.lcm
config/: robot.json  sensor.json
messages/: AppCarpet.py  AppPartitionDivision.py  AppPartitionMerge.py  AppPath.py  Bumper.py  CleanComponents.py  CleanData.py  CleanSpeed.py  Component.py  DevicePower.py  Enum.py  Imu.py  Int32.py  IrCode2.py  MacAddrCode.py  Order.py  Orders.py  Path.py  PointCloud2.py  Pose.py  RoomInfo.py  Segment.py  SleepTime.py  String.py  SweeperStatus.py  Time.py  Twist.py  VirtualWall.py  Zone.py
messages/src/: Iap.lcm  alarm_info.lcm  app_clean_info.lcm  app_map.lcm  app_not_disturb.lcm  app_partition_merge.lcm  app_parts_life.lcm  app_set_cleaning_sequence.lcm  app_spot_clean.lcm  app_timed_task_info.lcm  bluetooth_state.lcm  bt_macaddr.lcm  clean_data.lcm  coder.lcm  (+32 more)
rosws/: launch.sh  lidarcar.sh
sendevt/: CMakeLists.txt
sendevt/src/: comm.h  sendevt.cpp
(+590 files in other folders)
